@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/binutils-config
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils-config/ChangeLog,v 1.62 2012/08/18 03:57:51 vapier Exp $
+
+*binutils-config-3-r03.1 (10 Jan 2013)
+
+  10 Jan 2013; Fabian Groffen <grobian@gentoo.org>
+  +binutils-config-3-r03.1.ebuild, -binutils-config-3-r3.ebuild:
+  Revbump to silence the linker about a non-existing directory on Darwin
 
   18 Aug 2012; Mike Frysinger <vapier@gentoo.org> files/binutils-config-3:
   Fix relative ROOT handling #431104 by Greg Turner.
